--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
     <dependency>
         <groupId>javax</groupId>
         <artifactId>javaee-api</artifactId>
