--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.1.29-08</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
